2009-04-15  Mark Ellis <mark@mpellis.org.uk>

	* src/synce-trayicon.c - do not free device when just checking
	  it exists !
	* src-synce-trayicon.c - use gtk 2.16 tooltip api if available
	  to update tooltip when reqd

2009-04-10  Mark Ellis <mark@mpellis.org.uk>

	* access SynceInfo parameters with synce_info_get_ functions

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.13 release

2009-01-03  Mark Ellis <mark@mpellis.org.uk>

	* changed a few wstr_*_current and _ascii to _utf8

2008-12-13  Mark Ellis <mark@mpellis.org.uk>

	* added .desktop and autostart files

2008-12-11  Mark Ellis <mark@mpellis.org.uk>

	* corrected compiler warnings

2008-12-10  Mark Ellis <mark@mpellis.org.uk>

	* make libnotify required
	* device class - add device property connection-status for
	  passworded devices,  move rapi connection method from dccm
	  clients to here, check if device is locked methods that require
	  a connection
	* dccm client classes - add device-unlocked signal to dccm-client,
	  pass locked devices to device-manager instead of holding on to them
	* device-manager class - add methods providing count of all / 
	  connected / password required devices, and list of names
	  by these categories; add name parameter to device-removed and 
	  device-added signal; ask device to establish rapi connection when
	  fully connected
	* dont pop up password dialog immediately, put up notification of
	  password required, activation signal (left click) activates password
	  dialog, deal with multiple devices needing passwords
	* various code cleanups

2008-10-30  Mark Ellis <mark@mpellis.org.uk>

	* add service-starting signal for dccm clients
	* replace info dialogs with notifications
	* change from eggtrayicon to GtkStatusIcon

2008-10-27  Mark Ellis <mark@mpellis.org.uk>

	* src/synce_app_man.c - assume cabs with processor type 0 are ok,
	  extract cabs to subdir in /tmp

2008-10-24  Mark Ellis <mark@mpellis.org.uk>
